# ai-agents-experiments

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
apps/co-star-framework/: main.py
apps/github-qa-agent/: main.py
apps/github_qa_agent/: main.py
apps/langgraph_lats_agent/: main.py
apps/llm-settings/: main.py
apps/state_act_agent/: main.py
apps/tree_of_thoughts_agent/: main.py
apps/vet_crew/: main.py
